[gd_scene load_steps=9 format=3 uid="uid://bqyu4rme4odak"]

[ext_resource type="Script" uid="uid://b7xlw0r2vo3ww" path="res://scripts/menu/main_menu.gd" id="1_leamy"]
[ext_resource type="Texture2D" uid="uid://c8qh8oaw8exqc" path="res://assets/images/3988897f-d140-465c-91bf-149ae6e22d11.png" id="2_721jg"]
[ext_resource type="PackedScene" uid="uid://de0rxh3glgvk6" path="res://scenes/levels/options_menu.tscn" id="3_721jg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vrkn"]
texture = ExtResource("2_721jg")
modulate_color = Color(0.65834, 0.65834, 0.65834, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_06t4h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06t4h"]
bg_color = Color(0.903598, 0.903598, 0.903598, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.74978, 0.74978, 0.74978, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_leamy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxTexture_7vrkn")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 407.0
offset_top = 146.0
offset_right = 1121.0
offset_bottom = 291.0
theme_override_font_sizes/font_size = 27
text = "Hydra Homie's Horror Game"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.5
offset_top = -73.5
offset_right = 128.5
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 27

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Start Game"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Options"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Exit"

[node name="options_menu" parent="." instance=ExtResource("3_721jg")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
